[gd_scene load_steps=2 format=3 uid="uid://04pm3xl1kesh"]

[ext_resource type="Script" path="res://Scenes/GameMenu.gd" id="1_lqwbq"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqwbq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="solo" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Solo"

[node name="host" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="join" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="edit_dice" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Edit Dice"

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/edit_dice" to="." method="_on_edit_dice_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
